# find-issue

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SPEC.md  README.md  config.example.toml  config.toml  config.toml.ci.example  pyproject.toml
.claude/: .kit-manifest.json  CLAUDE.md  openspec
.claude/agents/: analyst.md  architect.md  developer.md  onboarder.md  qa.md
.claude/commands/: sdlc-fast.md  sdlc-full.md
.claude/context/: stack.md
.codegraph/: daemon.pid
.github/workflows/: ci.yml  osspulse.yml
.kiro/: .kit-manifest.json
.kiro/agents/: analyst.json  (+14 more)
.osspulse/: state.json
context/: architecture.md  conventions.md  glossary.md  legacy-ref.md  project.md  stack.md
memory/: analyst.md  architect.md  developer.md  lessons-learned.md  qa.md
openspec/: _cross-spec-context.md  config.yaml
specs/: .active-feature.json  _cross-spec-context.md
tests/: test_cli.py  test_cli_run.py  test_cli_run_cronsafe.py  test_cli_schedule.py  test_config.py  test_config_output.py  test_delivery_file.py  test_delivery_isolation.py  test_delivery_stdout.py  test_github_client.py  test_lock.py  test_models.py  test_pipeline.py  test_pipeline_truncate.py  test_pipeline_upstash.py  test_redis_cache.py  test_render_defensive.py  test_render_determinism.py  test_render_empty.py  test_render_format.py  test_render_import_isolation.py  test_render_truncation.py  test_schedule_cron.py  test_schedule_crontab.py  test_schedule_secrets.py  test_schedule_workflow.py  test_state_store.py  test_summarizer_client.py  test_summarizer_normalize.py
(+396 files in other folders)
