[project]
name = "osspulse"
version = "0.9.0"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "litellm>=1.40",
    "redis>=5.0",
]

[project.scripts]
osspulse = "osspulse.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/osspulse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["osspulse"]
omit = [
    "src/osspulse/ports.py",

]

[tool.coverage.report]
fail_under = 80
